cilium/CiliumNetworkPolicy-allow-hubbleui-egress-kubeapiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubbleui-egress-kubeapiserver
  namespace: kube-system
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-ui
